login and signup ui complete

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@ nav img{
     margin-right: 20px;
 }
 
-.login-btn{
+.orange-btn{
     background-color: #FF6E40;
     color: #fff !important;
     border-radius: 5px;
